--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header">
         <div class="container heder_flex">
         <div>
             <a href="#">
-                <img src="/img/LogoColor.svg" alt="logo">
+                <img src="./img/LogoColor.svg" alt="logo">
             </a>
         </div>
         <nav>
@@ -61,7 +61,7 @@
                 <button class="button button_transparent">Try</button>
             </div>
         </div>
-        <div><img src="/img/firstman.png" alt="firstman">
+        <div><img src="./img/firstman.png" alt="firstman">
         </div>
     </section>
     
@@ -69,7 +69,7 @@
         <div class="container footer_flex">
         <div>
             <a href="#">
-                <img src="/img/LogoColor.svg" alt="logo">
+                <img src="./img/LogoColor.svg" alt="logo">
             </a>
         </div>
         <nav>
