--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container heder_flex">
         <div>
             <a href="#">
-                <img src="./img/LogoColor.svg" alt="logo">
+                <img src="/img/LogoColor.svg" alt="logo">
             </a>
         </div>
         <nav>
@@ -61,10 +61,19 @@
                 <button class="button button_transparent">Try</button>
             </div>
         </div>
-        <div><img src="./img/firstman.png" alt="firstman">
+        <div><img src="./img/scets.png" alt="scets">
         </div>
     </section>
-    
+    <section class="container subscribe">
+        <div><img src="./img/man.png" alt="man"></div>
+        <div>
+            <h2 class="subscribe_title">Subscription index</h2>
+            <form>
+                <input class="input" type="email" placeholder="Email">
+                <button class="button button_violet">Try</button>
+            </form>
+        </div>
+    </section>
     <footer class="footer">
         <div class="container footer_flex">
         <div>
