--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             </form>
         </div>
     </section>
+    <section>
+
+    </section>
     <footer class="footer">
         <div class="container footer_flex">
         <div>
