--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container heder_flex">
             <div>
                 <a href="#">
-                    <img src="/img/LogoColor.svg" alt="logo">
+                    <img src="./img/LogoColor.svg" alt="logo">
                 </a>
             </div>
             <nav>
