--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 <body>
     <header class="header">
-        <div class="container heder_flex">
+        <div class="container header_flex">
             <div>
                 <a href="#">
                     <img src="./img/LogoColor.svg" alt="logo">
                 </a>
             </div>
-            <nav>
+            <nav class="nav">
                 <ul>
                     <li class="nav_li">
                         <a class="nav_link" href="#">
@@ -47,7 +47,7 @@
                     </li>
                 </ul>
             </nav>
-            <div>
+            <div class="header_button-container">
                 <button class="button button_orange">
                     Get Started
                 </button>
@@ -65,12 +65,13 @@
                 <button class="button button_violet">Get Started</button>
                 <button class="button button_transparent">Try</button>
             </div>
-        </div>
+        </div class="img_container">
         <div><img src="./img/scets.png" alt="scets">
         </div>
     </section>
     <section class="container subscribe">
-        <div><img src="./img/man.png" alt="man"></div>
+        <div class="img_container">
+            <img src="./img/man.png" alt="man"></div>
         <div>
             <h2 class="subscribe_title">Subscription index</h2>
             <form>
